[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/blank_box/Bb3.png" type="Texture" id=1]
[ext_resource path="res://script/Box/Box.gd" type="Script" id=2]
[ext_resource path="res://assets/blank_box/Bb6.png" type="Texture" id=3]
[ext_resource path="res://assets/blank_box/Bb1.png" type="Texture" id=4]
[ext_resource path="res://assets/blank_box/Bb7.png" type="Texture" id=5]
[ext_resource path="res://assets/blank_box/Bb5.png" type="Texture" id=6]
[ext_resource path="res://assets/blank_box/Bb2.png" type="Texture" id=7]
[ext_resource path="res://assets/blank_box/Bb4.png" type="Texture" id=8]
[ext_resource path="res://assets/box.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.6667, 13 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform vec4 line_color : hint_color = vec4(1.0);
uniform float line_thickness : hint_range(0, 10) = 1.0;

const vec2 OFFSETS[8] = {
	vec2(-1, -1), vec2(-1, 0), vec2(-1, 1), vec2(0, -1), vec2(0, 1), 
	vec2(1, -1), vec2(1, 0), vec2(1, 1)
};

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	float outline = 0.0;
	
	for (int i = 0; i < OFFSETS.length(); i++) {
		outline += texture(TEXTURE, UV + size * OFFSETS[i]).a;
	}
	outline = min(outline, 1.0);
	
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 1.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Box" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 4 )
frames = SubResource( 2 )
frame = 6
playing = true

[node name="Drop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="area_entered" from="." to="." method="_on_Box_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Box_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Box_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Box_mouse_exited"]
